[tool.poetry]
name = "prompting-api"
version = "0.1.0"
description = "The official REST API for Bittensor's flagship subnet 1 ([prompting](https://github.com/opentensor/prompting)), built by [Macrocosmos](https://macrocosmos.ai)."
authors = ["Felix Quinque, Dmytro Bobrenko, Steffen Cruz, Kalei Brady"]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.poetry.dependencies]
python = "3.10.*"
deprecated = "^1.2.14"
aiofiles = "^24.1.0"
aiohttp-apispec = "^2.2.3"
torch = "2.3.1"
pre-commit = "3.7.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
fastapi = "0.110.1"
pydantic = "^2.8.2"
openai = "^1.35.13"
apscheduler = "^3.10.4"
streamlit = "^1.36.0"
plotly = "^5.22.0"
ruff = "^0.5.4"
requests = "^2.32.3"
numpy = "1.22.4"
bittensor = {git = "https://github.com/opentensor/bittensor.git", rev = "release/7.1.2"}
pandas = "2.2.1"
black = "23.7.0"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
